--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -148,6 +148,11 @@ test_util = { workspace = true }
 tidb_query_datatype = { workspace = true }
 tipb_helper = { workspace = true }
 tokio = { version = "1.5", features = ["rt-multi-thread"] }
+tikv_alloc = { workspace = true }
+memory-stats = "1.0.0"
+prometheus = { version = "0.13", features=["nightly"]}
+server = { workspace = true}
+
 
 [target.'cfg(all(target_os = "linux", target_arch = "x86_64"))'.dev-dependencies]
 criterion-perf-events = "0.1"
